[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/icons/Coins.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Merc.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Journeys.png" type="Texture" id=4]
[ext_resource path="res://scenes/ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/icons/duelo.png" type="Texture" id=6]
[ext_resource path="res://scripts/MainScreen.gd" type="Script" id=7]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sfx/bg_s1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/backgrounds/s1/fg.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/Inv.png" type="Texture" id=11]
[ext_resource path="res://assets/icons/Config.png" type="Texture" id=12]
[ext_resource path="res://scenes/ConfigMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/ParallaxForeground.gd" type="Script" id=14]
[ext_resource path="res://scenes/Avatar.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0784314, 0.533333, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0627451, 0.235294, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.0392157, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.992157, 0.384314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 45
font_data = ExtResource( 1 )

[node name="MainScreen" type="Node2D"]
z_index = 8
script = ExtResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 400.048, 107.878 )
stream = ExtResource( 9 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LayerBack" type="CanvasLayer" parent="."]
layer = -1

[node name="ScrollBackground" parent="LayerBack" instance=ExtResource( 5 )]
position = Vector2( 1, 0 )
z_index = 1

[node name="Background" type="Node2D" parent="LayerBack"]

[node name="ColorRect" type="ColorRect" parent="LayerBack/Background"]
margin_top = 373.0
margin_right = 720.0
margin_bottom = 1284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerMid" type="CanvasLayer" parent="."]
layer = 0

[node name="UI" type="Node2D" parent="LayerMid"]
z_index = 1

[node name="Screen" type="Node2D" parent="LayerMid/UI"]
z_index = 1

[node name="MarginContainer" type="MarginContainer" parent="LayerMid/UI/Screen"]
margin_right = 718.0
margin_bottom = 1284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainGame" type="VBoxContainer" parent="LayerMid/UI/Screen/MarginContainer"]
margin_right = 718.0
margin_bottom = 1284.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animations" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame"]
margin_right = 718.0
margin_bottom = 430.0
rect_min_size = Vector2( 600, 430 )

[node name="PlayerInfoLine" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame"]
margin_top = 434.0
margin_right = 718.0
margin_bottom = 582.0
grow_horizontal = 0
grow_vertical = 0

[node name="PlayerInfoContainer" type="VBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine"]
margin_left = 57.0
margin_right = 661.0
margin_bottom = 148.0

[node name="NameContainer" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer"]
margin_right = 604.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/NameContainer"]
margin_left = 2.0
margin_right = 602.0
margin_bottom = 60.0
rect_min_size = Vector2( 600, 0 )
alignment = 2

[node name="lblPlayerName" type="Label" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/NameContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 444.0
margin_bottom = 60.0
rect_min_size = Vector2( 440, 60 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "player name"

[node name="TextureRect" type="TextureRect" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/NameContainer/HBoxContainer"]
margin_left = 448.0
margin_right = 480.0
margin_bottom = 60.0
texture = ExtResource( 2 )

[node name="x" type="Label" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/NameContainer/HBoxContainer"]
margin_left = 484.0
margin_right = 504.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 60 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x"

[node name="lblCoins" type="Label" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/NameContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 600.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "coins"
align = 2

[node name="LifeCenterContainer2" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer"]
margin_top = 64.0
margin_right = 604.0
margin_bottom = 104.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/LifeCenterContainer2"]
margin_right = 604.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 0 )

[node name="Label" type="Label" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/LifeCenterContainer2/HBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Energia"
__meta__ = {
"_editor_description_": ""
}

[node name="PlayerLifeBar" type="ProgressBar" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/LifeCenterContainer2/HBoxContainer"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 40 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 10.0
rounded = true
percent_visible = false

[node name="XPCenterContainer" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer"]
margin_top = 108.0
margin_right = 604.0
margin_bottom = 148.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/XPCenterContainer"]
margin_right = 604.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 0 )

[node name="XP" type="Label" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/XPCenterContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NÃ­vel 1"

[node name="XPBar" type="ProgressBar" parent="LayerMid/UI/Screen/MarginContainer/MainGame/PlayerInfoLine/PlayerInfoContainer/XPCenterContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 604.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 40 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 1.0
value = 80.0
rounded = true
percent_visible = false

[node name="MenuControl" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame"]
margin_top = 586.0
margin_right = 718.0
margin_bottom = 1017.0

[node name="VBoxContainer" type="VBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl"]
margin_left = 59.0
margin_right = 659.0
margin_bottom = 431.0
rect_min_size = Vector2( 0, 50 )

[node name="Spacer2" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_right = 600.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 24.0
margin_right = 600.0
margin_bottom = 83.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer"]
margin_right = 600.0
margin_bottom = 59.0

[node name="btnJornadas" type="Button" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = SubResource( 7 )
text = "Jornadas"

[node name="Sprite" type="Sprite" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer/HBoxContainer"]
position = Vector2( 1, -1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 20, 20 )

[node name="Spacer" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 87.0
margin_right = 600.0
margin_bottom = 107.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer2" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 111.0
margin_right = 600.0
margin_bottom = 170.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer2"]
margin_right = 600.0
margin_bottom = 59.0

[node name="btnMercador" type="Button" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = SubResource( 8 )
text = "Mercador"

[node name="Sprite" type="Sprite" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer2/HBoxContainer"]
position = Vector2( 0, -1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 20, 20 )

[node name="Spacer3" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 174.0
margin_right = 600.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer3" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 198.0
margin_right = 600.0
margin_bottom = 257.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer3"]
margin_right = 600.0
margin_bottom = 59.0

[node name="btnInventario" type="Button" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = SubResource( 9 )
text = "InventÃ¡rio"

[node name="Sprite" type="Sprite" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer3/HBoxContainer"]
position = Vector2( 0, -1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 11 )
offset = Vector2( 20, 20 )

[node name="Spacer4" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 261.0
margin_right = 600.0
margin_bottom = 281.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer4" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 285.0
margin_right = 600.0
margin_bottom = 344.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer4"]
margin_right = 600.0
margin_bottom = 59.0

[node name="btnDuelo" type="Button" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = SubResource( 7 )
text = "Duelo"

[node name="Sprite" type="Sprite" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer4/HBoxContainer"]
position = Vector2( 0, -1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
offset = Vector2( 20, 20 )

[node name="Spacer5" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 348.0
margin_right = 600.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer5" type="CenterContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer"]
margin_top = 372.0
margin_right = 600.0
margin_bottom = 431.0

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer5"]
margin_right = 600.0
margin_bottom = 59.0

[node name="btnBack" type="Button" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_right = 600.0
margin_bottom = 59.0
rect_min_size = Vector2( 600, 40 )
custom_fonts/font = SubResource( 7 )
text = "Voltar"

[node name="Sprite" type="Sprite" parent="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer5/HBoxContainer"]
position = Vector2( 0, -1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
offset = Vector2( 20, 20 )

[node name="LayerActors" type="CanvasLayer" parent="."]

[node name="Player" type="Node2D" parent="LayerActors"]
z_index = 3

[node name="Player" parent="LayerActors/Player" instance=ExtResource( 8 )]
position = Vector2( 91.0251, 339.544 )
z_index = 23

[node name="LayerTop" type="CanvasLayer" parent="."]
layer = 2

[node name="FrontEffects" type="Node2D" parent="LayerTop"]
script = ExtResource( 14 )

[node name="FrontArea" type="ParallaxBackground" parent="LayerTop/FrontEffects"]
layer = 8

[node name="ParallaxLayer" type="ParallaxLayer" parent="LayerTop/FrontEffects/FrontArea"]
show_behind_parent = true
motion_scale = Vector2( 2, 1 )
motion_mirroring = Vector2( 630, 0 )

[node name="Sprite" type="Sprite" parent="LayerTop/FrontEffects/FrontArea/ParallaxLayer"]
show_behind_parent = true
position = Vector2( -5, 0.2 )
scale = Vector2( 2.656, 2.656 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( 2, 0 )

[node name="LayerHUD" type="CanvasLayer" parent="."]
layer = 3

[node name="TopMenu" type="Node2D" parent="LayerHUD"]
z_index = 2

[node name="ConfigArea" type="Node2D" parent="LayerHUD/TopMenu"]
z_index = 5

[node name="ConfigMenu" parent="LayerHUD/TopMenu/ConfigArea" instance=ExtResource( 13 )]
position = Vector2( 166.122, 117.984 )
script = null

[node name="InventoryArea" type="Node2D" parent="LayerHUD/TopMenu"]

[node name="Inventory" parent="LayerHUD/TopMenu/InventoryArea" instance=ExtResource( 15 )]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="LayerHUD/TopMenu"]
margin_top = 19.0
margin_right = 700.0
margin_bottom = 147.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnConfig" type="TextureButton" parent="LayerHUD/TopMenu/HBoxContainer"]
margin_left = 636.0
margin_right = 700.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 4

[connection signal="pressed" from="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer/HBoxContainer/btnJornadas" to="." method="_on_btnJornadas_pressed"]
[connection signal="pressed" from="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer2/HBoxContainer/btnMercador" to="." method="_on_btnMercador_pressed"]
[connection signal="pressed" from="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer3/HBoxContainer/btnInventario" to="." method="_on_btnInventario_pressed"]
[connection signal="pressed" from="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer4/HBoxContainer/btnDuelo" to="." method="_on_btnDuelo_pressed"]
[connection signal="pressed" from="LayerMid/UI/Screen/MarginContainer/MainGame/MenuControl/VBoxContainer/CenterContainer5/HBoxContainer/btnBack" to="." method="_on_btnBack_pressed"]
[connection signal="pressed" from="LayerHUD/TopMenu/HBoxContainer/btnConfig" to="." method="_on_btnConfig_pressed"]
